IDLER: added conversation's endpoints to swagger
